<resources>
    <string name="app_name">Tic Tac Toc</string>
    <string name="tic_tac_toc">Tic Tac Toc</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_player_name">Enter Player Name</string>
    <string name="player_1">Player 1🤺</string>
    <string name="save">Save</string>
    <string name="player_2">Player 2👨‍🎓</string>
    <string name="start">Start</string>
    <string name="himanshu">Himanshu</string>
    <string name="chauhan">chauhan</string>
    <string name="player_1_name">Player 1 Name</string>
</resources>